# kmean-rs

./: Cargo.toml  README.md
examples/: lloyd.rs  minibatch.rs  status_events.rs
src/: api.rs  lib.rs  memory.rs
src/inits/: kmeanplusplus.rs  randompartition.rs  randomsample.rs
src/variants/: lloyd.rs  minibatch.rs
